--- a/Clipboard.html
+++ b/Clipboard.html
@@ -8,15 +8,10 @@
         window.onload = async function() {
             try {
                 const link = await navigator.clipboard.readText();
-                
-                // Open the about:blank page and inject the iframe
-                const newWindow = window.open("about:blank");
-                if (newWindow) {
-                    newWindow.document.write(
-                        `<iframe allowfullscreen src="${link}" 
-                        style="position:absolute; top:0; left:0; width:100%; height:100%; border:none; overflow:hidden;"></iframe>`
-                    );
-                }
+
+                // Change the URL to the copied link and close the current window
+                window.location.href = link;
+                window.close();
             } catch (err) {
                 console.error("Failed to read clipboard contents: ", err);
             }
@@ -25,6 +20,6 @@
 </head>
 <body>
     <h1>Redirecting...</h1>
-    <p>If this doesn't work, you either have nothing in your clipboard or your browser has insufficient permissions.</p>
+    <p>If you are not redirected now,  your browser has insufficient permissions.</p>
 </body>
 </html>
