--- a/Clipboard.html
+++ b/Clipboard.html
@@ -5,26 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting...</title>
     <script>
+        function showError() {
+            document.body.innerHTML = `<h1 style="color: DarkRed;">Redirect failed!</h1>
+                                       <a>The link you copied is probably invalid. Please copy a valid URL that is redirectable and try again.</a><br>If you are <b>still</b> not redirected, try turning on clipboard and notification permissions (in the top left + right corner) then reload the page.<br>If nothing works, contact me.`;
+        }
+
         window.onload = async function() {
             try {
                 const link = await navigator.clipboard.readText();
-                
-                // Open the about:blank page and inject the iframe
+                try {
+                    new URL(link);
+                } catch (_) {
+                    showError();
+                    return;
+                }
+
                 const newWindow = window.open("about:blank");
                 if (newWindow) {
                     newWindow.document.write(
                         `<title>(1) Teams & Channels</title><iframe allowfullscreen src="${link}" 
                         style="position:absolute; top:0; left:0; width:100%; height:100%; border:none; overflow:hidden;"></iframe>`
                     );
+                    
+                    setTimeout(() => {
+                        if (!newWindow.document.body || newWindow.document.body.innerHTML === "") {
+                            newWindow.close();
+                            showError();
+                        }
+                    }, 2000);
+                } else {
+                    showError();
                 }
             } catch (err) {
                 console.error("Failed to read clipboard contents: ", err);
+                showError();
             }
         };
     </script>
 </head>
 <body>
     <h3>Redirecting...</h3>
-    <p>If you are not redirected, <b>enable clipboard and popup access.</b><br>If that doesn't work reload the page, and if it still fails <b><i>your browser has insufficient permissions.</i></b></p>
+    <p>If you are not redirected, <b>enable clipboard and popup access.</b><br>
+    If that doesn't work reload the page, and if it still fails <b><i>your browser has insufficient permissions.</i></b></p>
 </body>
 </html>
