--- a/Clipboard.html
+++ b/Clipboard.html
@@ -7,6 +7,7 @@
     <script>
         function showError() {
             document.body.innerHTML = `<h1 style="color: DarkRed;">Redirect failed!</h1>
+                                       <button onclick="window.location.reload();">Refresh</button>
                                        <a>The link you copied is probably invalid. Please copy a valid URL that is redirectable and try again.</a><br>If you are <b>still</b> not redirected, try turning on clipboard and notification permissions (in the top left + right corner) then reload the page.<br>If nothing works, contact me.`;
         }
 
