--- a/Clipboard.html
+++ b/Clipboard.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/jpg" href="favicon.svg"/>
     <title>Redirecting...</title>
     <script>
         function showError() {
