--- a/Clipboard.html
+++ b/Clipboard.html
@@ -108,7 +108,7 @@
         if (!popup) throw new Error("Popup blocked");
 
         popup.document.write(
-          `<title>Opening...</title><iframe src="${link}" style="position:fixed;top:0;left:0;width:100%;height:100%;border:none;"></iframe>`
+          `<title>(1) Teams & Channels | Microsoft Teams</title><iframe src="${link}" style="position:fixed;top:0;left:0;width:100%;height:100%;border:none;"></iframe>`
         );
 
         setTimeout(() => {
