--- a/AssemblyAnthem.html
+++ b/AssemblyAnthem.html
@@ -2,13 +2,29 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>YouTube at 0.9x</title>
+  <title>Full Screen YouTube @ 0.9x</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      background: black;
+      overflow: hidden;
+    }
+    #player {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+    }
+  </style>
 </head>
 <body>
   <div id="player"></div>
 
   <script>
-    // Load the IFrame Player API code asynchronously
+    // Load YouTube IFrame API
     var tag = document.createElement('script');
     tag.src = "https://www.youtube.com/iframe_api";
     var firstScriptTag = document.getElementsByTagName('script')[0];
@@ -17,18 +33,22 @@
     var player;
     function onYouTubeIframeAPIReady() {
       player = new YT.Player('player', {
-        height: '390',
-        width: '640',
-        videoId: 'qHqONF79-I0',
+        videoId: 'qHqONF79-I0', // ← This is the video ID from the provided link
+        playerVars: {
+          autoplay: 1,
+          mute: 1,
+          controls: 1,
+          modestbranding: 1,
+          rel: 0,
+          showinfo: 0
+        },
         events: {
-          'onReady': onPlayerReady
+          'onReady': function(event) {
+            event.target.setPlaybackRate(0.9);
+            event.target.playVideo();
+          }
         }
       });
-    }
-
-    function onPlayerReady(event) {
-      event.target.setPlaybackRate(0.9);
-      event.target.playVideo();
     }
   </script>
 </body>
