--- a/LScammers.html
+++ b/LScammers.html
@@ -1,149 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Scammer Baiter</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      background: #111;
-      color: #ddd;
-      padding: 2em;
-    }
-    .chat {
-      max-width: 600px;
-      margin: auto;
-    }
-    .msg {
-      margin: 1em 0;
-      padding: 1em;
-      border-radius: 8px;
-    }
-    .user {
-      background: #333;
-    }
-    .grandpa {
-      background: #222;
-    }
-    button {
-      margin-top: 1em;
-      padding: 0.5em 1em;
-      font-size: 1em;
-    }
-  </style>
+<meta charset="UTF-8" />
+<title>Scammer Baiter - Fully Conversational</title>
+<style>
+  body {
+    font-family: sans-serif;
+    background: #111;
+    color: #ddd;
+    padding: 2em;
+  }
+  .chat {
+    max-width: 600px;
+    margin: auto;
+    height: 400px;
+    overflow-y: auto;
+    border: 1px solid #333;
+    padding: 1em;
+    border-radius: 8px;
+    background: #222;
+  }
+  .msg {
+    margin: 0.8em 0;
+    padding: 1em;
+    border-radius: 8px;
+    word-break: break-word;
+  }
+  .user {
+    background: #333;
+    text-align: right;
+  }
+  .grandpa {
+    background: #444;
+    text-align: left;
+  }
+  .interim {
+    opacity: 0.7;
+    font-style: italic;
+  }
+  button {
+    margin-top: 1em;
+    padding: 0.7em 1.4em;
+    font-size: 1em;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    background: #555;
+    color: #eee;
+    margin-right: 0.5em;
+  }
+  button:disabled {
+    background: #222;
+    cursor: not-allowed;
+  }
+  #status {
+    margin-top: 0.5em;
+    font-style: italic;
+    color: #aaa;
+    min-height: 1.2em;
+  }
+</style>
 </head>
 <body>
-  <div class="chat" id="chat"></div>
-  <input type="text" id="input" placeholder="Say something scammy..." style="width:100%; padding:1em; font-size:1.2em;">
-  <button id="start-voice">🎙️ Start Voice</button>
-  <script>
-    const ELEVENLABS_API_KEY = "sk_9a64df1f99c7895f18e9e96f8ffc44892a03441b96da651d";
-    const OLD_PERSON_VOICE_ID = "NOpBlnGInO9m6vDvFkFC";
-    const GEMINI_API_KEY = "AIzaSyCCddHHfolQcMW5sScWlW8fluxZ5oo22fI";
+<h1>Scammer Baiter - Fully Conversational</h1>
+<div class="chat" id="chat"></div>
+<div id="status"></div>
+<div>
+  <button id="start-btn">🎙️ Start Conversation</button>
+  <button id="stop-btn" disabled>🛑 Stop Conversation</button>
+</div>
 
-    const chatBox = document.getElementById("chat");
-    const input = document.getElementById("input");
-    const startVoiceBtn = document.getElementById("start-voice");
-    let currentAudio = null;
+<script>
+  // === CONFIG ===
+  const ELEVENLABS_API_KEY = "sk_9a64df1f99c7895f18e9e96f8ffc44892a03441b96da651d";
+  const OLD_PERSON_VOICE_ID = "o3VpiaQ9JcGIFpOrkHHf";
+  const GEMINI_API_KEY = "AIzaSyCCddHHfolQcMW5sScWlW8fluxZ5oo22fI";
 
-    input.addEventListener("keydown", async e => {
-      if (e.key === "Enter") {
-        const userText = input.value;
-        input.value = "";
-        await processMessage(userText);
-      }
-    });
+  // === UI Elements ===
+  const chatBox = document.getElementById("chat");
+  const statusBox = document.getElementById("status");
+  const startBtn = document.getElementById("start-btn");
+  const stopBtn = document.getElementById("stop-btn");
 
-    startVoiceBtn.onclick = () => {
+  // === Speech Recognition Setup ===
   const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
+  let recognition;
+  let recognizing = false;
 
-  if (!SpeechRecognition) {
-    alert("Speech Recognition not supported in this browser. Try using Google Chrome on HTTPS.");
-    return;
+  // State vars
+  let interimTranscript = "";
+  let finalTranscript = "";
+  let debounceTimeout = null;
+  let currentAudio = null;
+
+  function addMessage(speaker, text, cls, isInterim = false) {
+    // Remove previous interim if exists from that speaker
+    if (isInterim) {
+      const lastMsg = chatBox.querySelector(`.msg.${cls}.interim`);
+      if (lastMsg) {
+        lastMsg.innerHTML = `<strong>${speaker}:</strong><br>${text}`;
+        return;
+      }
+    }
+
+    const div = document.createElement("div");
+    div.className = `msg ${cls} ${isInterim ? "interim" : ""}`;
+    div.innerHTML = `<strong>${speaker}:</strong><br>${text}`;
+    chatBox.appendChild(div);
+    chatBox.scrollTop = chatBox.scrollHeight;
   }
 
-  const recognition = new SpeechRecognition();
-  recognition.lang = 'en-US';
-  recognition.interimResults = false;
-  recognition.maxAlternatives = 1;
+  function removeInterimMessages() {
+    const interims = chatBox.querySelectorAll(".interim");
+    interims.forEach(node => node.remove());
+  }
 
-  recognition.onstart = () => {
-    console.log("🎙️ Listening...");
-  };
-
-  recognition.onresult = async (event) => {
-    const userText = event.results[0][0].transcript;
-    console.log("You said:", userText);
-    await processMessage(userText);
-  };
-
-  recognition.onerror = (event) => {
-    console.error("Speech recognition error:", event.error);
-    alert("Speech recognition error: " + event.error);
-  };
-
-  recognition.onend = () => {
-    console.log("🛑 Done listening.");
-  };
-
-  recognition.start();
-};
-
-
-    async function processMessage(userText) {
-      addMessage("You", userText, "user");
-      if (currentAudio && !currentAudio.paused) {
-        currentAudio.pause();
-      }
-      const reply = await askGemini(userText);
-      addMessage("Grandpa", reply, "grandpa");
-      await playTTS(reply);
-    }
-
-    function addMessage(speaker, text, cls) {
-      const div = document.createElement("div");
-      div.className = `msg ${cls}`;
-      div.innerHTML = `<strong>${speaker}:</strong><br>${text}`;
-      chatBox.appendChild(div);
-      chatBox.scrollTop = chatBox.scrollHeight;
-    }
-
-    async function askGemini(text) {
-      const prompt = `You are a slightly confused but sharp-witted elderly man, roughly 65 years old, pretending to be a vulnerable target. You're in a phone call with a scammer. Everything you say will be spoken out loud, so make it sound natural, like spoken conversation.
+  async function askGemini(userText) {
+    statusBox.textContent = "Grandpa is thinking...";
+    const prompt = `You are a slightly confused but sharp-witted elderly man, roughly 65 years old, pretending to be a vulnerable target. You're in a phone call with a scammer. Everything you say will be spoken out loud, so make it sound natural, like spoken conversation.
 
 Your job is to waste the scammer’s time while sounding polite and cooperative. Act like you're struggling to understand things — maybe due to age or technical confusion — but throw in comments about old memories, your wife Margaret, your grandson who knows about computers, and random old-man tangents to keep the scammer engaged.
 
 Avoid giving real information and never directly accuse the scammer, just keep them talking. Add some southern charm and sprinkle in confusion. You're clever — you're baiting them. Keep your answers short and snappy, under 60 words each.
 
-Caller said: "${text}"`;
+Caller said: "${userText}"`;
 
-      try {
-        const response = await fetch(
-          "https://generativelanguage.googleapis.com/v1/models/gemini-2.0-flash:generateContent?key=" + GEMINI_API_KEY,
-          {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({
-              contents: [{ parts: [{ text: prompt }] }]
-            })
-          }
-        );
-
-        const data = await response.json();
-        console.log("Gemini:", data);
-        return data?.candidates?.[0]?.content?.parts?.[0]?.text || "Sorry, I didn’t catch that — say it again, sugar.";
-      } catch (err) {
-        console.error("Gemini error:", err);
-        return "Sorry, I didn’t catch that — say it again, sugar.";
+    try {
+      const response = await fetch(
+        `https://generativelanguage.googleapis.com/v1/models/gemini-2.0-flash:generateContent?key=${GEMINI_API_KEY}`,
+        {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({
+            contents: [{ parts: [{ text: prompt }] }]
+          }),
+        }
+      );
+      const data = await response.json();
+      if (data?.candidates?.[0]?.content?.parts?.[0]?.text) {
+        statusBox.textContent = "";
+        return data.candidates[0].content.parts[0].text.trim();
       }
+      statusBox.textContent = "";
+      return "Sorry, sugar, didn’t catch that. Say it again?";
+    } catch (err) {
+      console.error("Gemini error:", err);
+      statusBox.textContent = "";
+      return "Hmm… something's wrong on my end. Try again later.";
     }
+  }
 
-    async function playTTS(text) {
+  async function playTTS(text) {
+    if (currentAudio && !currentAudio.paused) {
+      currentAudio.pause();
+    }
+    try {
       const response = await fetch(`https://api.elevenlabs.io/v1/text-to-speech/${OLD_PERSON_VOICE_ID}`, {
         method: "POST",
         headers: {
           "Content-Type": "application/json",
-          "xi-api-key": ELEVENLABS_API_KEY
+          "xi-api-key": ELEVENLABS_API_KEY,
         },
         body: JSON.stringify({
           model_id: "eleven_flash_v2_5",
@@ -153,14 +169,96 @@ Caller said: "${text}"`;
             similarity_boost: 0.75,
             use_speaker_boost: true
           }
-        })
+        }),
       });
-
+      if (!response.ok) {
+        console.error("TTS failed", await response.text());
+        return;
+      }
       const audioBlob = await response.blob();
       const audioUrl = URL.createObjectURL(audioBlob);
       currentAudio = new Audio(audioUrl);
       currentAudio.play();
+    } catch (err) {
+      console.error("TTS error:", err);
     }
-  </script>
+  }
+
+  async function processFinalTranscript(text) {
+    removeInterimMessages();
+    addMessage("You", text, "user");
+    if (currentAudio && !currentAudio.paused) {
+      currentAudio.pause();
+    }
+    const reply = await askGemini(text);
+    addMessage("Grandpa", reply, "grandpa");
+    await playTTS(reply);
+  }
+
+  // Initialize recognition and event handlers
+  function startRecognition() {
+    if (!SpeechRecognition) {
+      alert("Your browser does not support Speech Recognition API");
+      return;
+    }
+    recognition = new SpeechRecognition();
+    recognition.lang = "en-US";
+    recognition.interimResults = true;
+    recognition.continuous = true;
+    recognizing = true;
+
+    recognition.onresult = (event) => {
+      interimTranscript = "";
+      for (let i = event.resultIndex; i < event.results.length; i++) {
+        const transcript = event.results[i][0].transcript;
+        if (event.results[i].isFinal) {
+          finalTranscript += transcript + " ";
+          if (debounceTimeout) clearTimeout(debounceTimeout);
+          debounceTimeout = setTimeout(() => {
+            processFinalTranscript(finalTranscript.trim());
+            finalTranscript = "";
+          }, 500); // 0.5s debounce after final chunk
+        } else {
+          interimTranscript += transcript;
+          removeInterimMessages();
+          addMessage("You", interimTranscript, "user", true);
+          // Interrupt TTS if playing
+          if (currentAudio && !currentAudio.paused) {
+            currentAudio.pause();
+          }
+        }
+      }
+    };
+
+    recognition.onerror = (e) => {
+      console.error("Speech recognition error", e);
+      statusBox.textContent = `Speech recognition error: ${e.error}`;
+    };
+
+    recognition.onend = () => {
+      if (recognizing) {
+        recognition.start(); // keep it running continuously
+      }
+    };
+
+    recognition.start();
+    statusBox.textContent = "Listening...";
+    startBtn.disabled = true;
+    stopBtn.disabled = false;
+  }
+
+  function stopRecognition() {
+    if (!recognition) return;
+    recognizing = false;
+    recognition.stop();
+    statusBox.textContent = "Conversation stopped.";
+    startBtn.disabled = false;
+    stopBtn.disabled = true;
+  }
+
+  startBtn.onclick = () => startRecognition();
+  stopBtn.onclick = () => stopRecognition();
+
+</script>
 </body>
 </html>
