--- a/calendar.htm
+++ b/calendar.htm
@@ -824,7 +824,7 @@
                         'Authorization': `Bearer ${OPENAI_API_KEY}`
                     },
                     body: JSON.stringify({
-                        model: "gpt-3.5-turbo",
+                        model: "gpt-5-mini-2025-08-07",
                         messages: [{ role: "user", content: prompt }],
                         temperature: 0.7,
                         max_tokens: 40,
@@ -847,5 +847,4 @@
     </script>
 </body>
 </html>
-
 
